--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,7 +71,7 @@ stages:
     - script: |
           echo "Running Snyk security scan"
           npm install -g snyk
-          snyk auth $SNYK_AUTH_TOKEN
+          snyk auth $(SNYK_TOKEN)
           snyk test --severity-threshold=high --json > snyk-results.json
       displayName: 'Run Snyk Scan'
 
@@ -102,11 +102,21 @@ stages:
               echo "Deploying to Test Environment"
             displayName: 'Run Integration Tests'
           - script: |
+              echo "Running Snyk security scan"
               npm install -g snyk
               snyk auth $(SNYK_TOKEN)
-              snyk test
-            env:
-              SNYK_TOKEN: $(SNYK_TOKEN)
+              snyk test --severity-threshold=high --json > snyk-results.json
+            displayName: 'Run Snyk Scan'
+
+          - script: |
+              echo "Checking for Critical Vulnerabilities"
+              cat snyk-results.json
+              severityCount=$(jq '.vulnerabilities | map(select(.severity=="high" or .severity=="critical")) | length' snyk-results.json)
+              if [ "$severityCount" -gt 0 ]; then
+              echo "Critical vulnerabilities found!"
+              exit 1
+              fi
+          
             
           
 - stage: staging 
