--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,7 +65,7 @@ stages:
 
     - task: PublishPipelineArtifact@1
       inputs:
-        artifactName: 'drop'
+        artifactName: 'webapp'
         targetPath: '$(Build.ArtifactStagingDirectory)'        
     
     - script: |
@@ -104,7 +104,7 @@ stages:
 
 - stage: StageDeployment
   displayName: 'Stage Environment Deployment'
-  dependsOn: TestDeployment
+  dependsOn: BuildAndTest
   condition: succeeded()
   jobs:
   - deployment: DeployToStage
@@ -116,50 +116,38 @@ stages:
           steps:
           - script: |
               sudo apt-get update
-          
+
               #cd ./webapp
               #composer install --no-dev --optimize-autoloader
              # zip -r webapp.zip .
              #  displayname: 'Install dependencies and zip application'
- 
           - task: PublishPipelineArtifact@1
             inputs:
              targetPath: '$(System.DefaultWorkingDirectory)/webapp.zip'
              artifactName: 'webapp'
              publishLocation: 'pipeline'
 
-          
-- stage: Deploy
-  displayName: 'Deploy Stage'
-  dependsOn: BuildAndTest
-  jobs:
-  - job: staging
-    displayName: 'Deploy to CyberPanel staging'
-    pool:
-      vmImage: 'ubuntu-latest'
+          - task: DownloadPipelineArtifact@2
+            inputs:
+             artifactName: 'webapp'
+             targetPath: '$(System.DefaultWorkingDirectory)/webapp'
 
-    steps:
-    # Download artifacts
-    - task: DownloadPipelineArtifact@2
-      inputs:
-        artifactName: 'drop'
-        targetPath: '$(System.DefaultWorkingDirectory)/webapp'
+                  # Extract Artifact
+          - script: |
+              unzip $(System.DefaultWorkingDirectory)/webapp.zip -d $(System.DefaultWorkingDirectory)/webapp
+            displayName: 'Extract Artifact'
+                  # Deploy to CyberPanel using FTP
+          - task: FtpUpload@2
+            inputs:
+              credentialsOption: 'inputs'
+              serverUrl: 'ftp://$(CYBERPANEL_SERVER)'
+              username: '$(CYBERPANEL_USERNAME)'
+              password: '$(CYBERPANEL_PASSWORD)'
+              rootDirectory: '$(System.DefaultWorkingDirectory)/webapp'
+              remoteDirectory: '/public_html/'
+              trustSSL: true
 
-    # Extract Artifact
-    - script: |
-        unzip $(System.DefaultWorkingDirectory)/webapp.zip -d $(System.DefaultWorkingDirectory)/webapp
-      displayName: 'Extract Artifact'
-
-    # Deploy to CyberPanel using FTP
-    - task: FtpUpload@2
-      inputs:
-        credentialsOption: 'inputs'
-        serverUrl: 'ftp://$(CYBERPANEL_SERVER)'
-        username: '$(CYBERPANEL_USERNAME)'
-        password: '$(CYBERPANEL_PASSWORD)'
-        rootDirectory: '$(System.DefaultWorkingDirectory)/webapp'
-        remoteDirectory: '/public_html/'
-        trustSSL: true
+    
         
 - stage: Production
   displayName: 'Deploy to Production'
