Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -104,7 +104,7 @@ stages:
 
 - stage: StageDeployment
   displayName: 'Stage Environment Deployment'
-  dependsOn: BuildAndTest
+  dependsOn: TestDeployment
   condition: succeeded()
   jobs:
   - deployment: DeployToStage
