Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,9 @@ variables:
   variables:
   rbuildConfiguration: 'Release'
   pBuildConfiguration: '--prod'
+  CYBERPANEL_SERVER: '168.119.231.115:8090'
+  CYBERPANEL_USERNAME: 'KGFDevOpsAdmin'
+  CYBERPANEL_PASSWORD: 'reuHs#x2qMl4o^^N'
 
 stages:
 # Stage 1: Build & UnitTest
@@ -125,7 +128,8 @@ stages:
              artifactName: 'webapp'
              targetPath: '$(System.DefaultWorkingDirectory)/webapp'
                   # Extract Artifact
-         # - script: |
+          - script: |
+              zip -r webapp.zip .
              # unzip $(System.DefaultWorkingDirectory)/webapp.zip -d $(System.DefaultWorkingDirectory)/webapp
             #displayName: 'Extract Artifact'
                   # Deploy to CyberPanel using FTP
