--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,9 +9,7 @@ pr:
       - develop
 pool:
   vmImage: 'ubuntu-latest'
-variables:
-  
-  SNYK_TOKEN: 'da364a31-6b96-412a-b516-c4d2bf4bc8fe'
+
   variables:
   rbuildConfiguration: 'Release'
   pBuildConfiguration: '--prod'
@@ -90,6 +88,10 @@ stages:
           - script: |
               echo "Deploying to Test Environment"
             displayName: 'Run Integration Tests'
+          - script: |
+             npm config set fund false --location=global
+             set cache .npm
+             npm audit fix 
           - script: |
               echo "Running Snyk security scan"
               npm install -g snyk
