--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -91,8 +91,27 @@ stages:
           - script: |
               echo "Deploying to Test Environment"
             displayName: 'Run Integration Tests'
-          
-         
+
+  - job: SnykScan
+    displayName: 'SnykScan'
+    
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - script: |
+        echo "Running Snyk security scan"
+        npm install -g snyk 
+        npm config set fund false
+      displayName: 'Run Snyk Scan'
+    - script: |
+        cat snyk-results.json
+        severityCount=$(jq '.vulnerabilities | map(select(.severity=="high" or .severity=="critical")) | length' snyk-results.json)
+        if [ "$severityCount" -gt 0 ]; then
+          echo "Critical vulnerabilities found!"
+          exit 1
+        fi
+      displayName: 'Check for Critical Vulnerabilities'      
+        
 
 - stage: StageDeployment
   displayName: 'Stage Environment Deployment'
