--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -139,7 +139,25 @@ stages:
               rootDirectory: '$(Pipeline.Workspace)/webapp/'
               remoteDirectory: '/public_html'
               trustSSL: true
-
+  - job: SnykScan
+    displayName: 'SnykScan'
+   
+    pool:
+      vmImage: ubuntu-latest
+    steps:
+    - script: |
+        echo "Running Snyk security scan"
+        npm install -g snyk 
+        npm config set fund false
+      displayName: 'Run Snyk Scan'
+    - script: |
+        cat snyk-results.json
+        severityCount=$(jq '.vulnerabilities | map(select(.severity=="high" or .severity=="critical")) | length' snyk-results.json)
+        if [ "$severityCount" -gt 0 ]; then
+          echo "Critical vulnerabilities found!"
+          exit 1
+        fi
+      displayName: 'Check for Critical Vulnerabilities'
 - stage: ProductionDeployment
   displayName: 'Production Environment Deployment'
   dependsOn: StageDeployment
