--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,9 +30,9 @@ stages:
     - script: npm i sharp
       displayName: 'install image optimizer'
     - script: |
+        npm audit fix --force
         npm config set fund false --location=global
         set cache .npm
-        npm audit fix 
     - script: 'echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
       displayName: 'Write build info'
       workingDirectory: '.'
